apt-listchanges (2.84) UNRELEASED; urgency=low

  * Fix typo in Polish translation. Closes: #510618

 -- Christian Perrier <bubulle@debian.org>  Mon, 19 Oct 2009 22:59:10 +0200

apt-listchanges (2.83+nmu1) unstable; urgency=low

  * Non-maintainer upload with maintainer's agreement
    (he likes living dangerously)

  [ Pierre Habouzit ]
  * Apt-listchanges moves to collab-maint.

  [ Christian Perrier ]
  * Catalan (Jordi Mallach).  Closes: #548654
  * Fix pending l10n issues. Program translations:
    - Simplified Chinese. Closes: #501042
    - Brazilian Portuguese. Closes: #501637
  * Fix pending l10n issues. Debconf translations:
    - Brazilian Portuguese (Felipe Augusto van de Wiel (faw)).
      Closes: #501639
  * Add ${misc:Depends} to dependencies to properly
    deal with dependencies implied by some debhelper
    utilities. As a consequence, drop the dependency on
    debconf.

 -- Christian Perrier <bubulle@debian.org>  Tue, 29 Sep 2009 23:16:26 +0200

apt-listchanges (2.83) unstable; urgency=low

  [ Christian Perrier ]
  * Fix extra space before exclamation mark in an error
    message. Translations unfuzied.
  * Fix extra question mark in one string. Translations
    unfuzzied and fixed when they had two question marks too.
  * Programs translation updates:
    - French. Closes: #469248
    - Estonian. Closes: #500979
    - Basque. Closes: #501010
    - Traditional Chinese. Closes: #501034
    - Simplified Chinese. Closes: #501039
    - Swedish. Closes: #501051
    - Japanese. Closes: #501530
    - Czech. Closes: #501212
    - Italian. Closes: #501238
    - German. Closes: #501265
    - Russian. Closes: #501469
    - Portuguese. Closes: #501494
    - Polish. Closes: #501496
    - Dutch. Closes: #501621
  * Debconf translations:
    - Swedish. Closes: #492092
    - Simplified Chinese. Closes: #501039
    - Polish. Closes: #501296
  * Russian. Closes: #501469

  [ Pierre Habouzit ]
  * Fix the Vcs-* header to add the missing "apps/" in it.